--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2mcNS5kyAUtT2Q+hQlBfoDqTBH194H36k0Q4d73CxbE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://fireshop-entreprise
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=fireshop
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root2020
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
