--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:2mcNS5kyAUtT2Q+hQlBfoDqTBH194H36k0Q4d73CxbE=
 APP_DEBUG=true
-APP_URL=http://fireshop-entreprise
+APP_URL=http://fireshop-entreprise.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
